--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "mongoose": "^7.6.1",
-    "puppeteer": "^21.3.8"
+    "puppeteer-core": "^21.3.8"
   },
   "devDependencies": {
     "@types/express": "^4.17.19",
