--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "mongoose": "^7.6.1",
-    "puppeteer": "^21.3.8"
+    "puppeteer": "^21.3.8",
+    "typescript": "^5.2.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.19",
@@ -28,7 +29,6 @@
     "nodemon": "^3.0.1",
     "npm-run-all": "^4.1.5",
     "ts-node": "^10.9.1",
-    "tslint": "^6.1.3",
-    "typescript": "^5.2.2"
+    "tslint": "^6.1.3"
   }
 }
