--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "mongoose": "^7.6.1",
+    "nodemailer": "^6.9.7",
     "puppeteer": "^21.3.8"
   },
   "devDependencies": {
     "@types/express": "^4.17.19",
     "@types/node": "^20.8.4",
+    "@types/nodemailer": "^6.4.13",
     "nodemon": "^3.0.1",
     "npm-run-all": "^4.1.5",
     "ts-node": "^10.9.1",
